Fixes to make sure the user has active org